--- a/DjangoWebClassActivity/app/templates/app/index.html
+++ b/DjangoWebClassActivity/app/templates/app/index.html
@@ -8,6 +8,9 @@
     <div class="col-md-6">
         <h2><strong>{{ r.title }}</strong></h2>
         <h4>{{ r.address }}</h4>
+        <h5 {% if r.date|date:"d" > now|date:"d" %} class="text-success" {% endif %}>活動日期:{{ r.date }} </h5>
+        <h5 {% if r.deadline|date:"d" = now|date:"d" %} class="text-warning" {% endif %}{% if r.deadline|date:"d" < now|date:"d" %} class="text-danger" {% endif %}>報名截止日期:{{ r.deadline }}</h5>
+        <h5>${{ r.price }}</h5>
         <p>
         <!-- <img src="" alt="{{ r.title }}"> -->
         <br>
